--- a/app/src/main/res/layout/ut_fenli_setting.xml
+++ b/app/src/main/res/layout/ut_fenli_setting.xml
@@ -58,24 +58,29 @@
                     android:gravity="center"
                     android:text="(1-30s)"/>
             </LinearLayout>
-            <Switch
-                android:id="@+id/QI_switch"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="电压/电流关联"/>
-            <Switch
-                android:id="@+id/TI_switch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="温度/漏电关联"/>
-            <Switch
-                android:id="@+id/fenli_liandong_switch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="联动关联"/>
+                android:gravity="center"
+                android:text="注:设置值为31时为常开状态。"/>
+            <!--<Switch-->
+                <!--android:id="@+id/QI_switch"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="5dp"-->
+                <!--android:text="电压/电流关联"/>-->
+            <!--<Switch-->
+                <!--android:id="@+id/TI_switch"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="5dp"-->
+                <!--android:text="温度/漏电关联"/>-->
+            <!--<Switch-->
+                <!--android:id="@+id/fenli_liandong_switch"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="5dp"-->
+                <!--android:text="联动关联"/>-->
         </LinearLayout>
 
     </LinearLayout>
