--- a/app/src/main/res/menu/menu_electr.xml
+++ b/app/src/main/res/menu/menu_electr.xml
@@ -9,4 +9,5 @@
     <item  android:id="@+id/race"  android:title="功率详情"/>
     <item  android:id="@+id/heartime_set"  android:title="心跳时间设置"/>
     <item  android:id="@+id/restart"  android:title="重启"/>
+    <item  android:id="@+id/electr_yuzhi_set"  android:title="阈值设置"/>
 </menu>
