--- a/app/src/main/res/layout/electr_yuzhi_setting_zd.xml
+++ b/app/src/main/res/layout/electr_yuzhi_setting_zd.xml
@@ -7,7 +7,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="350dp">
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -52,7 +52,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="(220-280V)"/>
+                        android:text="(220-329V)"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -80,7 +80,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="(145-220V)"/>
+                        android:text="(66-208V)"/>
                 </LinearLayout>
 
 
@@ -110,7 +110,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="(1-63A)"/>
+                        android:text="(1-800A)"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -139,126 +139,124 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:textSize="10sp"
-                        android:text="(10-1000mA)"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_margin="10dp">
-                    <TextView
-                        android:id="@+id/Temperature_value_name"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
-                        android:gravity="center"
-                        android:text="温度阈值(℃):"/>
-                    <EditText
-                        android:id="@+id/Temperature_value"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:padding="3dp"
-                        android:layout_weight="1.2"
-                        android:background="@drawable/edit_view_bg"/>
-                    <TextView
-                        android:id="@+id/Temperature_value_yuzhi"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="(0-100℃)"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_margin="10dp">
-                    <TextView
-                        android:id="@+id/CurrentMAX_value_name"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
-                        android:gravity="center"
-                        android:text="最大电流(A):"/>
-                    <EditText
-                        android:id="@+id/CurrentMAX_value"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:padding="3dp"
-                        android:layout_weight="1.2"
-                        android:background="@drawable/edit_view_bg"/>
-                    <TextView
-                        android:id="@+id/CurrentMAX_value_yuzhi"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="(0-100A)"/>
-                </LinearLayout>
-                <Switch
-                    android:id="@+id/fenli_switch"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="分励关联"/>
-                <LinearLayout
-                    android:id="@+id/fenliHoldTime_line"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_margin="10dp"
-                    android:visibility="gone">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/fenliHoldTime_value_name"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.2"
-                            android:gravity="center"
-                            android:text="分励时间(s):"/>
-                        <EditText
-                            android:id="@+id/fenliHoldTime_value"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:padding="3dp"
-                            android:layout_weight="1.2"
-                            android:background="@drawable/edit_view_bg"/>
-                        <TextView
-                            android:id="@+id/fenliHoldTime_value_yuzhi"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="(1-30s)"/>
-                    </LinearLayout>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="注:设置值为31时为常开状态。"/>
-                    <Switch
-                        android:id="@+id/QI_switch"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="电压/电流关联"/>
-                    <Switch
-                        android:id="@+id/TI_switch"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="温度/漏电关联"/>
-                    <Switch
-                        android:id="@+id/fenli_liandong_switch"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="联动关联"/>
+                        android:text="(20-2000mA)"/>
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="10dp">
+                    <TextView
+                        android:id="@+id/Temp1_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.2"
+                        android:gravity="center"
+                        android:text="温度A阈值(℃):"/>
+                    <EditText
+                        android:id="@+id/Temp1_value"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="3dp"
+                        android:layout_weight="1.2"
+                        android:background="@drawable/edit_view_bg"/>
+                    <TextView
+                        android:id="@+id/Temp1_value_yuzhi"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textSize="10sp"
+                        android:text="(45-140℃)"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="10dp">
+                    <TextView
+                        android:id="@+id/Temp2_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.2"
+                        android:gravity="center"
+                        android:text="温度B阈值(℃):"/>
+                    <EditText
+                        android:id="@+id/Temp2_value"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="3dp"
+                        android:layout_weight="1.2"
+                        android:background="@drawable/edit_view_bg"/>
+                    <TextView
+                        android:id="@+id/Temp2_value_yuzhi"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textSize="10sp"
+                        android:text="(0-1000℃)"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="10dp">
+                    <TextView
+                        android:id="@+id/Temp3_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.2"
+                        android:gravity="center"
+                        android:text="温度C阈值(℃):"/>
+                    <EditText
+                        android:id="@+id/Temp3_value"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="3dp"
+                        android:layout_weight="1.2"
+                        android:background="@drawable/edit_view_bg"/>
+                    <TextView
+                        android:id="@+id/Temp3_value_yuzhi"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textSize="10sp"
+                        android:text="(0-1000℃)"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="10dp">
+                    <TextView
+                        android:id="@+id/Temp4_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.2"
+                        android:gravity="center"
+                        android:text="温度D阈值(℃):"/>
+                    <EditText
+                        android:id="@+id/Temp4_value"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="3dp"
+                        android:layout_weight="1.2"
+                        android:background="@drawable/edit_view_bg"/>
+                    <TextView
+                        android:id="@+id/Temp4_value_yuzhi"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textSize="10sp"
+                        android:text="(0-1000℃)"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
